src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__app_render__tests__snapshot_grid_2col_2workers.snap
---
source: src/commands/task/orchestrate/app_render.rs
expression: "render_grid_snap(120, 24, &panels, None)"
---
┌ W1 [1.1: api] ────────────────────────────────────────────┌ W2 [2.1: ui] ─────────────────────────────────────────────
│ ● implementing                                            │ ◎ reviewing
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│ $0.0000 │ ↓0 ↑0                                           │ $0.0000 │ ↓0 ↑0
