src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__app_render__tests__snapshot_grid_3col_6workers.snap
---
source: src/commands/task/orchestrate/app_render.rs
expression: "render_grid_snap(200, 40, &panels, Some(1))"
---
┌ ▶ W1 [1.1: test] ────────────────────────────────────────────────┌ W2 [2.1: test] ─────────────────────────────────────────────────┌ W3 [3.1: test] ──────────────────────────────────────────────────
│ ● implementing                                                   │ ● implementing                                                  │ ● implementing
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│ $0.0000 │ ↓0 ↑0                                                  │ $0.0000 │ ↓0 ↑0                                                 │ $0.0000 │ ↓0 ↑0
┌ W4 [4.1: test] ──────────────────────────────────────────────────┌ W5 [5.1: test] ─────────────────────────────────────────────────┌ W6 [6.1: test] ──────────────────────────────────────────────────
│ ● implementing                                                   │ ● implementing                                                  │ ● implementing
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│ $0.0000 │ ↓0 ↑0                                                  │ $0.0000 │ ↓0 ↑0                                                 │ $0.0000 │ ↓0 ↑0
