src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__app_render__tests__snapshot_grid_3col_9workers.snap
---
source: src/commands/task/orchestrate/app_render.rs
expression: "render_grid_snap(200, 45, &panels, Some(5))"
---
┌ W1 [1.1] ────────────────────────────────────────────────────────┌ W2 [2.1] ───────────────────────────────────────────────────────┌ W3 [3.1] ────────────────────────────────────────────────────────
│ ● implementing                                                   │ ● implementing                                                  │ ● implementing
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│ $0.0000 │ ↓0 ↑0                                                  │ $0.0000 │ ↓0 ↑0                                                 │ $0.0000 │ ↓0 ↑0
┌ W4 [4.1] ────────────────────────────────────────────────────────┌ ▶ W5 [5.1] ─────────────────────────────────────────────────────┌ W6 [6.1] ────────────────────────────────────────────────────────
│ ● implementing                                                   │ ● implementing                                                  │ ● implementing
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│ $0.0000 │ ↓0 ↑0                                                  │ $0.0000 │ ↓0 ↑0                                                 │ $0.0000 │ ↓0 ↑0
┌ W7 [7.1] ────────────────────────────────────────────────────────┌ W8 [8.1] ───────────────────────────────────────────────────────┌ W9 [9.1] ────────────────────────────────────────────────────────
│ ● implementing                                                   │ ● implementing                                                  │ ● implementing
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│                                                                  │                                                                 │
│ $0.0000 │ ↓0 ↑0                                                  │ $0.0000 │ ↓0 ↑0                                                 │ $0.0000 │ ↓0 ↑0
