src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__app_render__tests__snapshot_grid_with_grace_period.snap
---
source: src/commands/task/orchestrate/app_render.rs
expression: "render_grid_snap(120, 24, &panels, None)"
---
┌ W1 [1.1] ─────────────────────────────────────────────────┌ W2 [---] ─────────────────────────────────────────────────
│ ● implementing                                            │ ○ idle
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│                                                           │
│ $0.0000 │ ↓0 ↑0                                           │ $0.0000 │ ↓0 ↑0
